[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.105.0"
qdrant-client = "^1.7.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-dotenv = "^1.0.0"
prisma = "^0.11.0"
python-telegram-bot = "^20.7"
tgcrypto = "^1.2.5"
llama-index = "^0.9.17"
google-generativeai = ">=0.3.0"
matplotlib = "^3.8.2"
trulens-eval = "^0.19.1"
ipython = "^8.18.1"
streamlit-javascript = "^0.1.5"
openai = "^1.5.0"
instructor = "^0.4.4"
tiktoken = "^0.5.2"
nest-asyncio = "^1.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
